# fine-tuning-open-source-text-generation

./: .gitignore  Makefile  README.md  pyproject.toml
infra/: azure.yaml  main.bicep  main.parameters.json  next-steps.md
infra/agent/: standard-ai-hub.bicep  standard-dependent-resources.bicep
infra/scripts/: write_env.ps1  write_env.sh
notebooks/: import_model_into_registry.ipynb  sample_score.json  summarization_with_text_gen_component_llama.ipynb  text-generation-config.json  text_to_sql_fine_tuning_open_hermes.ipynb
src/: deployment.py
src/core/: conda.yaml  config.py  job.py  train.py
src/data_loader/: blob_loader.py
