[tool.poetry]
name = "fine-tuning-text-to-sql"
version = "0.1.0"
description = ""
authors = ["Karina Assini <karinaa@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
accelerate = "0.34.2"
azure-ai-ml = "1.18.0"
azure-common = "1.1.28"
azure-core = "1.30.2"
azureml-core = "1.57.0.post3"
azure-cosmos = "4.7.0"
azure-graphrbac = "0.61.1"
azure-identity = "1.17.1"
azure-mgmt-authorization = "4.0.0"
azure-mgmt-core = "1.4.0"
azure-mgmt-keyvault = "10.3.1"
azure-mgmt-network = "26.0.0"
azure-mgmt-resource = "23.1.1"
azure-mgmt-storage = "21.2.1"
azure-storage-blob = "12.19.0"
azure-storage-file-datalake = "12.8.0"
azure-storage-file-share = "12.17.0"
azureml-fsspec = "1.3.1"
azureml-mlflow = "1.57.0.post1"
azureml-evaluate-mlflow = "0.0.61"
bitsandbytes = "0.44.1"
black = "24.4.2"
datasets = "3.0.1"
flash-attn = "2.6.3"
ipykernel = "6.29.5"
llama-cpp-python = "0.3.1"
mlflow = "2.16.0"
mltable = "1.6.1"
numpy = "< 2.0.0"
pandas = "^2.1.3"
peft = "0.13.0"
pre-commit = "^3.6.0"
pyarrow = "^15.0.0"
pydantic-yaml = "^1.2.0"
pytest-cov = "^4.1.0"
pyyaml = "^6.0.1"
python-dotenv = "1.0.1"
py7zr = "0.22.0"
sentencepiece = "0.2.0"
setuptools = "72.1.0"
texttable = "1.7.0"
tiktoken = "0.7.0"
transformers = "4.46.0"
tokenize-rt = "6.0.0"
tokenizers = "0.20.0"
torch = "2.4.1"
tqdm = "4.66.4"
wheel = "0.43.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
